--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,7 @@
 
 {% block form %}
 
-<h2 class="question">Wer würde am ehesten den orble flimben?</h2>
+<h2 class="question">{{q}}</h2>
 
 <div class="results">
     {% for vote in votes %}
