mobile ui, easiest so far

--- a/static/style.css
+++ b/static/style.css
@@ -162,3 +162,15 @@ input[type="radio"]{
     background-color: var(--ac) !important;
     font-weight: 600;
 }
+
+@media (width < 1300px){
+    .form{
+        width: 75%;
+    }
+}
+
+@media (width < 1000px){
+    .results{
+        width: 100%;
+    }
+}
