--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>TischTalk</title>
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+    <link rel="shortcut icon" href="{{url_for('static', filename='icon.png')}}" type="image/x-icon">
 </head>
 <body>
     <script>
